[ADD] Add select content type on the mail template page.

--- a/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineTemplate.dcm.yml
+++ b/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineTemplate.dcm.yml
@@ -15,6 +15,11 @@ Plugin\MailMagazine\Entity\MailMagazineTemplate:
         subject:
             type: text
             nullable: false
+        content_type:
+            type: smallint
+            nullable: false
+            unsigned: false
+            default: '0'
         body:
             type: text
             nullable: false
