メール再送処理を実装

--- a/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineSendHistory.dcm.yml
+++ b/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineSendHistory.dcm.yml
@@ -34,7 +34,7 @@ Plugin\MailMagazine\Entity\MailMagazineSendHistory:
                 default: '0'
         error_count:
             type: integer
-            nullable: true
+            nullable: false
             unsigned: false
             options:
                 default: '0'
