--- a/config.yml
+++ b/config.yml
@@ -9,3 +9,5 @@ orm.path:
 #form:
 #    onSetData:
 #        Form\Type\PaymentFragmentForm
+const:
+    mail_magazine_dir: ${ROOT_DIR}/app/mail_magazine
