テンプレートにHTML形式の本文を追加

--- a/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineTemplate.dcm.yml
+++ b/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineTemplate.dcm.yml
@@ -18,6 +18,9 @@ Plugin\MailMagazine\Entity\MailMagazineTemplate:
         body:
             type: text
             nullable: false
+        html_body:
+            type: text
+            nullable: true
         del_flg:
             type: smallint
             nullable: false
