HTML形式をサポート

--- a/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineSendHistory.dcm.yml
+++ b/Resource/doctrine/Plugin.MailMagazine.Entity.MailMagazineSendHistory.dcm.yml
@@ -22,6 +22,9 @@ Plugin\MailMagazine\Entity\MailMagazineSendHistory:
         body:
             type: text
             nullable: true
+        html_body:
+            type: text
+            nullable: true
         send_count:
             type: integer
             nullable: true
