--- a/Resource/config/services.yaml
+++ b/Resource/config/services.yaml
@@ -1,3 +1,6 @@
+parameters:
+    mail_magazine_dir: '%kernel.project_dir%/app/mail_magazine'
+
 services:
     Plugin\MailMagazine\Entity\AdminCustomerQueryCustomizer:
         tags: ['eccube.query_customizer']
