--- a/.travis.yml
+++ b/.travis.yml
@@ -1,106 +1,92 @@
 language: php
+
 sudo: required
-dist: trusty
-group: deprecated-2017Q4
 
 cache:
   directories:
-    - $HOME/.composer/cache
+      - vendor
+      - $HOME/.composer/cache
+      - bin/.phpunit
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
+  - 7.2
 
 env:
   # plugin code
   global:
     PLUGIN_CODE=MailMagazine
-  matrix:
-    # ec-cube master
-    - ECCUBE_VERSION=master DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - ECCUBE_VERSION=master DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    # ec-cube 3.0.9
-    - ECCUBE_VERSION=3.0.9 DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - ECCUBE_VERSION=3.0.9 DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    # ec-cube 3.0.8
-    - ECCUBE_VERSION=3.0.8-for-plugin-test DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - ECCUBE_VERSION=3.0.8-for-plugin-test DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    # ec-cube 3.0.14
-    - ECCUBE_VERSION=3.0.14 DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - ECCUBE_VERSION=3.0.14 DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
+    BRANCH=4.0
 
-matrix:
-  fail_fast: true
+before_install: &php_setup |
+  phpenv config-rm xdebug.ini || true
+  echo "opcache.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  echo "apc.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+
+install_eccube: &install_eccube |
+  tar cvzf ${HOME}/${PLUGIN_CODE}.tar.gz ./*
+  git clone https://github.com/EC-CUBE/ec-cube.git
+  cd ec-cube
+  git checkout -b ${BRANCH} origin/${BRANCH}
+  composer selfupdate
+  composer install --dev --no-interaction -o --apcu-autoloader
+
+eccube_setup: &eccube_setup |
+  echo "APP_ENV=test" > .env
+  bin/console doctrine:database:create
+  bin/console doctrine:schema:create
+  bin/console eccube:fixtures:load
+  bin/console eccube:plugin:install --path=${HOME}/${PLUGIN_CODE}.tar.gz
+  bin/console eccube:plugin:enable --code=${PLUGIN_CODE}
+
+jobs:
   fast_finish: true
   include:
-    - php: 5.3
-      dist: precise
-    - php: 7.1
-      env: ECCUBE_VERSION=master DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres COVERAGE=true
-  exclude:
-    - php: 7.1
-      env: ECCUBE_VERSION=master DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    # ec-cube 3.0.8-3.0.10 はphp7非対応のため実行しない
-    - php: 7.0
-      env: ECCUBE_VERSION=3.0.8-for-plugin-test DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - php: 7.0
-      env: ECCUBE_VERSION=3.0.8-for-plugin-test DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    - php: 7.1
-      env: ECCUBE_VERSION=3.0.8-for-plugin-test DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - php: 7.1
-      env: ECCUBE_VERSION=3.0.8-for-plugin-test DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    - php: 7.0
-      env: ECCUBE_VERSION=3.0.9 DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - php: 7.0
-      env: ECCUBE_VERSION=3.0.9 DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-    - php: 7.1
-      env: ECCUBE_VERSION=3.0.9 DB=mysql USER=root DBNAME=myapp_test DBPASS=' ' DBUSER=root
-    - php: 7.1
-      env: ECCUBE_VERSION=3.0.9 DB=pgsql USER=postgres DBNAME=myapp_test DBPASS=password DBUSER=postgres
-
-install:
-  - gem install mime-types -v 2.99.1
-  - gem install mailcatcher
-
-before_script:
-  - if [[ $COVERAGE ]]; then echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini ; fi
-  # archive plugin
-  - tar cvzf ${HOME}/${PLUGIN_CODE}.tar.gz ./*
-  # clone ec-cube
-  - git clone https://github.com/EC-CUBE/ec-cube.git
-  - cd ec-cube
-  # checkout version
-  - sh -c "if [ ! '${ECCUBE_VERSION}' = 'master' ]; then  git checkout -b ${ECCUBE_VERSION} refs/tags/${ECCUBE_VERSION}; fi"
-  # update composer
-  - composer selfupdate
-  - composer install --dev --no-interaction -o
-  # install ec-cube
-  - sh eccube_install.sh ${DB} none
-  # install plugin
-  - php app/console plugin:develop install --path=${HOME}/${PLUGIN_CODE}.tar.gz
-  # enable plugin
-  - php app/console plugin:develop enable --code=${PLUGIN_CODE}
-  # mail catcher
-  - mailcatcher
-
-script:
- # exec phpunit on ec-cube
-   - if [ !$COVERAGE ]; then ./vendor/bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests; fi
-   - if [ $COVERAGE ]; then ./vendor/bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --coverage-clover=coverage.clover; fi
-
-after_script:
-  # disable plugin
-  - php app/console plugin:develop disable --code=${PLUGIN_CODE}
-  # uninstall plugin
-  - php app/console plugin:develop uninstall --code=${PLUGIN_CODE}
-  # re install plugin
-  - php app/console plugin:develop install --code=${PLUGIN_CODE}
-  # re enable plugin
-  - php app/console plugin:develop enable --code=${PLUGIN_CODE}
-
-after_success:
-  # for coveralls
-  - if [ $COVERAGE ]; then php vendor/bin/coveralls -v -x coverage.clover; fi
+    - stage: Inspection
+      php: 7.1
+      env: DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+      install:
+        - *install_eccube
+        - *eccube_setup
+      script: vendor/bin/php-cs-fixer fix --config=.php_cs.dist --dry-run app/Plugin/${PLUGIN_CODE}
+    - &unit_test
+      stage: Unit Test
+      env: DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+      before_install:
+        - *php_setup
+        - gem install mime-types -v 2.99.1
+        - gem install mailcatcher
+      install:
+        - *install_eccube
+        - *eccube_setup
+        # mail catcher
+        - mailcatcher
+      script:
+        - ./bin/phpunit app/Plugin/${PLUGIN_CODE}/Tests
+      after_script:
+        # disable plugin
+        - bin/console eccube:plugin:disable --code=${PLUGIN_CODE}
+        # uninstall plugin
+        - bin/console eccube:plugin:uninstall --code=${PLUGIN_CODE}
+        # re install plugin
+        - bin/console eccube:plugin:install --code=${PLUGIN_CODE}
+        # re enable plugin
+        - bin/console eccube:plugin:enable --code=${PLUGIN_CODE}
+    - <<: *unit_test
+      env: DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+    - &coverage
+      stage: Code Coverage
+      env: DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9 COVERAGE=1
+      before_install:
+        - *php_setup
+        - gem install mime-types -v 2.99.1
+        - gem install mailcatcher
+      install:
+        - *install_eccube
+        - *eccube_setup
+        # mail catcher
+        - mailcatcher
+      script:
+        - ./bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --coverage-clover=coverage.clover
+      after_success:
+        - php vendor/bin/php-coveralls -v -x coverage.clover
