--- a/Resource/config/services.yaml
+++ b/Resource/config/services.yaml
@@ -2,5 +2,5 @@ parameters:
     mail_magazine_dir: '%kernel.project_dir%/app/mail_magazine'
 
 services:
-    Plugin\MailMagazine\Entity\AdminCustomerQueryCustomizer:
+    Plugin\MailMagazine4\Entity\AdminCustomerQueryCustomizer:
         tags: ['eccube.query_customizer']
