--- a/.travis.yml
+++ b/.travis.yml
@@ -87,8 +87,6 @@ jobs:
         # mail catcher
         - mailcatcher
       script:
-        - docker run -e DATABASE_URL=sqlite:////usr/src/myapp/var/eccube.db -v "$PWD":/usr/src/myapp:cached -w /usr/src/myapp --rm nanasess/phpdbg phpdbg -qrr -dmemory_limit=-1 -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --coverage-clover=coverage.clover
-        - ./bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --coverage-clover=coverage.clover
+        - phpdbg ./vendor/bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --coverage-clover=coverage.clover
       after_success:
-        - sed -i.bak -e 's|/usr/src/myapp/||g' coverage.clover
         - php vendor/bin/php-coveralls -v -x coverage.clover
