--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ php:
   - 7.2
 
 env:
-  - DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
-  - DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
+  matrix:
+    - DATABASE_URL=mysql://root:@localhost/cube4_dev DATABASE_SERVER_VERSION=5
+    - DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
   # plugin code
   global:
     PLUGIN_CODE=MailMagazine4
