--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-  "name": "MailMagazine4",
+  "name": "ec-cube/MailMagazine4",
   "version": "4.0.0",
-  "description": "Mail Magazine Plugin for EC-CUBE4",
+  "description": "メールマガジンプラグイン",
   "type": "eccube-plugin",
+  "require": {
+    "ec-cube/plugin-installer": "~0.0.6"
+  },
   "extra": {
     "code": "MailMagazine4"
   }
