--- a/.travis.yml
+++ b/.travis.yml
@@ -88,14 +88,15 @@ jobs:
   fast_finish: true
   include:
     - stage: Inspection
-      php: 7.1
+      php: 7.2
       env: DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9
       install:
         - *install_eccube
         - *eccube_setup
-      script: vendor/bin/php-cs-fixer fix --config=.php_cs.dist --dry-run app/Plugin/${PLUGIN_CODE}
+      script: vendor/bin/php-cs-fixer fix --config=.php_cs.dist --dry-run --verbose app/Plugin/${PLUGIN_CODE}
     - &coverage
       stage: Code Coverage
+      php: 7.2
       env: DATABASE_URL=postgres://postgres:password@localhost/cube4_dev DATABASE_SERVER_VERSION=9 COVERAGE=1
       before_install:
         - *php_setup
