--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "ec-cube/MailMagazine4",
+  "name": "ec-cube/mailmagazine4",
   "version": "4.0.3",
   "description": "メールマガジンプラグイン",
   "type": "eccube-plugin",
   "require": {
-    "ec-cube/plugin-installer": "~0.0.6"
+    "ec-cube/plugin-installer": "~0.0.6 || ^2.0"
   },
   "extra": {
     "code": "MailMagazine4"
