--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,15 +22,11 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-18.04 ]
-        php: [ '7.1', '7.2', '7.3', '7.4' ]
-        db: [ mysql, pgsql ]
-        eccube_version: [ '4.0.6-p1', '4.1' ]
+        php: [ '7.4', '8.0', '8.1' ]
+        db: [ 'mysql', 'pgsql' ]
+        eccube_version: [ improve/symfony5 ]
         plugin_code: [ 'MailMagazine4' ]
         include:
-          - eccube_version: '4.0.6-p1'
-            composer: 'v1'
-          - eccube_version: '4.1'
-            composer: 'v2'
           - db: mysql
             dbport: '3306'
             dbuser: 'root'
@@ -42,12 +38,7 @@ jobs:
             dbuser: 'postgres'
             dbpass: 'password'
             dbname: 'myapp_test'
-            dbversion: 9.5
-        exclude:
-          - eccube_version: '4.1'
-            php: '7.1'
-          - eccube_version: '4.1'
-            php: '7.2'
+            dbversion: 10
     services:
       mysql:
         image: mysql:5.7
@@ -58,7 +49,7 @@ jobs:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
       postgres:
-        image: postgres:9.5
+        image: postgres:10
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
@@ -90,7 +81,7 @@ jobs:
     - name: Checkout EC-CUBE
       uses: actions/checkout@v2
       with:
-        repository: 'EC-CUBE/ec-cube'
+        repository: 'nanasess/ec-cube'
         ref: ${{ matrix.eccube_version }}
         path: 'ec-cube'
 
@@ -106,39 +97,18 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-composer-
 
-    - if: matrix.composer == 'v1'
-      run: sudo composer selfupdate --1
-
     - name: Install to composer
       working-directory: 'ec-cube'
       run: composer install --no-interaction -o --apcu-autoloader
 
-    - if: matrix.composer == 'v1'
-      working-directory: 'ec-cube'
-      run: composer require kiy0taka/eccube4-test-fixer "dev-main@dev"
-
     - name: Setup EC-CUBE
       env:
-        DB: ${{ matrix.db }}
-        USER: ${{ matrix.dbuser }}
-        DBUSER: ${{ matrix.dbuser }}
-        DBPASS: ${{ matrix.dbpass }}
-        DBNAME: ${{ matrix.dbname }}
-        DBPORT: ${{ matrix.dbport }}
-        DBSERVER: 127.0.0.1
-        DBVERSION: ${{ matrix.dbversion }}
-        ROOT_URLPATH: /ec-cube/html
+        APP_ENV: 'test'
+        DATABASE_URL: ${{ matrix.database_url }}
+        DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
       working-directory: 'ec-cube'
       run: |
-        export PGPASSWORD=${DBPASS}
-        echo "APP_ENV=prod" > .env
-        echo "APP_DEBUG=0" >> .env
-        echo "DATABASE_URL=${DB}://${DBUSER}:${DBPASS}@${DBSERVER}/${DBNAME}" >> .env
-        echo "DATABASE_SERVER_VERSION=${DBVERSION}" >> .env
-        echo "MAILER_URL=smtp://127.0.0.1:1025" >> .env
-        echo "HTTP_SITEURL=https://localhost" >> .env
-        echo "USE_SELFSIGNED_SSL_CERTIFICATE=1" >> .env
-        cat .env
+        bin/console doctrine:database:create
         bin/console doctrine:schema:create
         bin/console eccube:fixtures:load
 
@@ -149,25 +119,12 @@ jobs:
       run: |
         bin/console eccube:plugin:install --code=${PLUGIN_CODE} --path=${GITHUB_WORKSPACE}/${PLUGIN_CODE}.tar.gz
         bin/console eccube:plugin:enable --code=${PLUGIN_CODE}
-        rm codeception/_support/*Tester.php
 
     - name: Run PHPUnit
-      if: matrix.composer == 'v2'
       env:
         PLUGIN_CODE: ${{ matrix.plugin_code }}
       working-directory: 'ec-cube'
       run: bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist app/Plugin/${PLUGIN_CODE}/Tests
-
-    - name: Run PHPUnit
-      if: matrix.composer == 'v1'
-      env:
-        PLUGIN_CODE: ${{ matrix.plugin_code }}
-      working-directory: 'ec-cube'
-      run: |
-        find app/Plugin/${PLUGIN_CODE}/Tests -name "*Test.php" | while read TESTCASE
-        do
-          ./vendor/bin/phpunit -c app/Plugin/${PLUGIN_CODE}/phpunit.xml.dist --include-path vendor/kiy0taka/eccube4-test-fixer/src --loader 'Eccube\PHPUnit\Loader\Eccube4CompatTestSuiteLoader' ${TESTCASE}
-        done
 
     - name: Disable Plugin
       working-directory: 'ec-cube'
