--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,17 +28,11 @@ jobs:
         plugin_code: [ 'MailMagazine4' ]
         include:
           - db: mysql
-            dbport: '3306'
-            dbuser: 'root'
-            dbpass: 'root'
-            dbname: 'myapp_test'
-            dbversion: 5.7
+            database_url: mysql://root:password@127.0.0.1:3306/eccube_db
+            database_server_version: 5
           - db: pgsql
-            dbport: '5432'
-            dbuser: 'postgres'
-            dbpass: 'password'
-            dbname: 'myapp_test'
-            dbversion: 10
+            database_url: postgres://postgres:password@127.0.0.1:5432/eccube_db
+            database_server_version: 14
     services:
       mysql:
         image: mysql:5.7
