--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,7 @@ jobs:
     - name: Setup EC-CUBE
       env:
         APP_ENV: 'test'
+        APP_DEBUG: 0
         DATABASE_URL: ${{ matrix.database_url }}
         DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
       working-directory: 'ec-cube'
@@ -109,6 +110,7 @@ jobs:
     - name: Setup Plugin
       env:
         APP_ENV: 'test'
+        APP_DEBUG: 0
         DATABASE_URL: ${{ matrix.database_url }}
         DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
         PLUGIN_CODE: ${{ matrix.plugin_code }}
@@ -120,6 +122,7 @@ jobs:
     - name: Run PHPUnit
       env:
         APP_ENV: 'test'
+        APP_DEBUG: 0
         DATABASE_URL: ${{ matrix.database_url }}
         DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
         PLUGIN_CODE: ${{ matrix.plugin_code }}
@@ -130,6 +133,7 @@ jobs:
       working-directory: 'ec-cube'
       env:
         APP_ENV: 'test'
+        APP_DEBUG: 0
         DATABASE_URL: ${{ matrix.database_url }}
         DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
         PLUGIN_CODE: ${{ matrix.plugin_code }}
@@ -138,6 +142,7 @@ jobs:
     - name: Uninstall Plugin
       env:
         APP_ENV: 'test'
+        APP_DEBUG: 0
         DATABASE_URL: ${{ matrix.database_url }}
         DATABASE_SERVER_VERSION: ${{ matrix.database_server_version }}
         PLUGIN_CODE: ${{ matrix.plugin_code }}
