--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         operating-system: [ ubuntu-18.04 ]
         php: [ '7.4', '8.0', '8.1' ]
         db: [ 'mysql', 'pgsql' ]
-        eccube_version: [ improve/symfony5 ]
+        eccube_version: [ '4.2' ]
         plugin_code: [ 'MailMagazine42' ]
         include:
           - db: mysql
@@ -75,7 +75,7 @@ jobs:
     - name: Checkout EC-CUBE
       uses: actions/checkout@v2
       with:
-        repository: 'nanasess/ec-cube'
+        repository: 'EC-CUBE/ec-cube'
         ref: ${{ matrix.eccube_version }}
         path: 'ec-cube'
 
